log/build_2022-07-27_10-08-38/central/stderr.log
  File "/app/dev_ws/install/central/lib/python3.8/site-packages/central/central_data.py", line 459
    def copy_paste()
                    ^
SyntaxError: invalid syntax

